# pylox

./: README.md  pyproject.toml  requirements.txt  setup.cfg
pylox/: __init__.py
samples/: hello.lox  literals.lox
src/pylox/: __init__.py  __main__.py  expr.py  interpreter.py  main.py  parser.py  scanner.py  stmt.py  token.py  tokens.py
test/: test_scanner.py
tests/: test_parser.py
