[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pylox"
authors = [{ name = "Jonathan Lopez", email = "jonathanglopez@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["typer[all]", "rich"]
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Source = "https://github.com/otherJL0/pylox"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage[toml]"]
dev = [
  "mypy",
  "black",
  "isort",
  "pylint",
  "pip-tools",
  "pre-commit",
  "flit",
  "thx",
]
profile = ["memray", "scalene"]

[project.scripts]
lox = "lox:main"
