[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["networkx>=3.4.2", "rich>=13.9.3"]

[project.scripts]
pylox = "pylox:main"

[tool.uv]
dev-dependencies = [
  "ipython>=8.29.0",
  "memray>=1.14.0",
  "pytest>=8.3.3",
  "ruff>=0.7.1",
]
