[metadata]
name = pylox
version = 0.0.1
url = https://github.com/otherJL0/pylox
author = Jonathan Lopez
author_email = "Jonathan Lopez" <jonathanglopez@gmail.com>
description = A toy interpreter for the Lox programming language
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.10
package_dir = 
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pylox = pylox:entrypoint
pipx.run =
    build = pylox:entrypoint
